# surrogate-modelling

./: .gitignore  README.md  main.py  pyproject.toml
data/duct_pressure_distribution/: dataloader.py
data/duct_pressure_distribution/N128/: names.json  out_ps_smax_d02_geometry_inputs.json  out_ps_smax_d02_pressure.npy  out_ps_smax_dmax_geometry_inputs.json  out_ps_smax_dmax_pressure.npy  out_ps_smax_dmin_geometry_inputs.json  out_ps_smax_dmin_pressure.npy  out_ps_smid_d02_geometry_inputs.json  out_ps_smid_d02_pressure.npy  out_ps_smid_dmax_geometry_inputs.json  out_ps_smid_dmax_pressure.npy  out_ps_smid_dmid_geometry_inputs.json  out_ps_smid_dmid_pressure.npy  out_ps_smid_dmin_geometry_inputs.json  out_ps_smid_dmin_pressure.npy  out_ps_smin_d02_geometry_inputs.json  out_ps_smin_d02_pressure.npy  out_ps_smin_dmax_geometry_inputs.json  out_ps_smin_dmax_pressure.npy  out_ps_smin_dmid_geometry_inputs.json  out_ps_smin_dmid_pressure.npy  out_ps_smin_dmin_geometry_inputs.json  out_ps_smin_dmin_pressure.npy  out_ps_smin_dnasa_geometry_inputs.json  out_ps_smin_dnasa_pressure.npy
data/mass_spring_damper/: inps.npy  loaddata.py  outs.npy
nnmodels/: __init__.py  aug_mlp_neuralode.py  base.py  feedforward.py  feedforward_new  load_data.py  mlp2cnn.py  mlp_neuralode.py  train.py
tests/: cnn_duct_pressure.py  ffnn.py
tutorials/: harmonic_oscillator.ipynb
